Fix some weird spacing when there's not enough room in the header for both the column name and its icons

--- a/client/app/core/constraint-icons/constraint-icons.component.scss
+++ b/client/app/core/constraint-icons/constraint-icons.component.scss
@@ -1,3 +1,8 @@
+:host {
+  display: flex;
+  flex-direction: row;
+}
+
 .header-icon {
   fill: rgba(0, 0, 0, 0.54);
   padding-right: 7px;
